Fix crash caused by TextChannelWatcherProxyModel

void KTp::TextChannelWatcherProxyModel::onChannelMessagesChanged()
void KTp::TextChannelWatcherProxyModel::onChannelInvalidated()
emit dataChanged() using indexes from the wrong model.

Because it's an QIdentityProxyModel it never causes any harm,
but it's still "wrong" so Qt asserts break in the grouping model.

BUG: 325679
REVIEW: 113126